# quantitativeli

./: .env.example  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
monitoring/: prometheus.yml
scripts/: deploy.sh  update.sh
src/quant_trading_llm/: __init__.py  config.py
src/quant_trading_llm/backtest/: __init__.py  backtest_engine.py
src/quant_trading_llm/data/: __init__.py  database.py  market_data.py  models.py
src/quant_trading_llm/llm/: __init__.py  llm_analyzer.py  prompts.py  sentiment_analyzer.py
src/quant_trading_llm/risk/: __init__.py  portfolio_optimizer.py  risk_manager.py  var_calculator.py
src/quant_trading_llm/strategies/: __init__.py  base_strategy.py  llm_enhanced_strategy.py  mean_reversion_strategy.py  momentum_strategy.py  risk_parity_strategy.py  strategy_engine.py
src/quant_trading_llm/trading/: __init__.py  order_manager.py  portfolio_manager.py  trading_engine.py
